[package]
name = "gong-de-increase"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.2.0"
borsh = "1.0"

[dev-dependencies]
litesvm = "0.7.0"
solana-client = "2.2.0"
solana-sdk = "2.2.0"
tokio = "1.47.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
borsh = "1.0"

[[example]]
name = "client"
path = "examples/client.rs"
